# code-katas

./: .gitignore  CODEOWNERS  README.md  names_santa.txt
99_bottles/: README.md
99_bottles/lib/: bottles.rb
BowlingGame/: .buildpath  .project  Bowling Game Kata.ppt
BowlingGame/csharp-xunit/: bowling-csharp-xunit.sln  csharp-xunit.sln
BowlingGame/java-akka/: .gitignore
BowlingGame/java-spec/: .project
BowlingGame/python/: bowling_game.py  bowling_game_test.py
BowlingGame/ruby/: .project  game.rb
DecoratorDojo/: DecoratorDojo.0.1.nupkg  DecoratorDojo.sln  DecoratorDojo.sln.nuspec  Local.testsettings  TraceAndTestImpact.testsettings
DecoratorDojo/DecoratorDojo/: DecoratorDojo.csproj  DecoratorDojo.csproj.nuspec  packages.config
PrimeFactors/: Local.testsettings  PrimeFactors.sln  TraceAndTestImpact.testsettings
PrimeFactors/PrimeFactors/: PrimeFactorsKata.csproj  PrimeFactorsTest.cs
SecretSanta/PowerShell/: santa.ps1
advent_of_code_2022/day_01/: 01_calories_spec.rb  README.md
advent_of_code_2022/day_02/: 02_rps_coersion_spec.rb  02_rps_playbook.rb  02_rps_playbook_spec.rb  02_rps_spec.rb  README.md
advent_of_code_2022/day_03/: 03_rucksacks_spec.rb  README.md
advent_of_code_2022/day_04/: 04_space_spec.rb  README.md
advent_of_code_2022/day_05/: README.md  (+1 more)
commit-derby/: Game.rb  Gemfile  Guardfile  README.md
diamond_kata/: pyproject.toml
diamond_kata/src/diamond_kata/: diamond.py
diamond_kata/tests/: diamond_test.py
robocode1/: robocode1.sln
ruby/: Guardfile
tdd-workshop/: build.gradle
train-reservation-kata/: guiding_test.py
(+153 files in other folders)
