[tool.poetry]
name = "diamond-kata"
version = "0.1.0"
description = ""
authors = ["Chuck Durfee <neontapir@gmail.com>"]
readme = "README.md"
packages = [{include = "diamond_kata", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
